--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -7,7 +7,7 @@
     <%= image_tag('Logo.png', :class => 'logo', :alt => 'logo') %>
     <nav class="navbar">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="true">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="true">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -208,6 +208,20 @@
         $('.count').counterUp({
             delay: 10,
             time: 3000
+        });
+
+        // for nav bar show and hide
+
+        $('.navbar-header button').click(function() {
+            if ($("#myNavbar.in").length)
+            {
+                $("#myNavbar").collapse('hide');
+
+            }
+            else
+            {
+                $("#myNavbar").collapse('show');
+            }
         });
 
         var path = '//easy.myfonts.net/v2/js?sid=10257(font-family=Helvetica+Neue+35+Thin)&sid=10261(font-family=Helvetica+Neue+75+Bold)&sid=10263(font-family=Helvetica+Neue+45+Light)&sid=10265(font-family=Helvetica+Neue+65+Medium)&key=uhXXeSVbUB',
