[Layout]:  Close sign image only applicable for sign_in and sign_up modal

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -886,7 +886,7 @@ th {
   }
 }
 
-.modal-header .close {
+.close-image .close {
   background: image-url("modal_close_btn.png") no-repeat;
   height: 20px;
   opacity: 1;
