--- a/app/views/shared/_sign_in_modal.html.erb
+++ b/app/views/shared/_sign_in_modal.html.erb
@@ -4,7 +4,7 @@
   <div class="modal-backdrop fade in"></div>
   <div class="modal-dialog modal-md">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header close-image">
         <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button"></button>
         <h3 class="modal-title">Sign In</h3>
       </div>
