--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -53,7 +53,7 @@
           <div class="row">
             <div class="col-md-12">
               <%= f.label :landmark %>
-              <%= f.text_field :landmark, required: true %>
+              <%= f.text_field :landmark %>
             </div>
             <div class="col-md-12">
               <%= f.label :city %>
