change offer page inbox and start show hide issues

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -61,6 +61,6 @@
         <% end %>
         <!--need to change proper style sheet -->
         $('#star-blue').hide();
-        $('inbox-black').hide();
+        $('#inbox-black').hide();
     });
 </script>
