--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -19,7 +19,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render partial: 'shared/flash_messages', flash: flash %>
+<%#= render partial: 'shared/flash_messages', flash: flash %>
 
 <%= yield %>
 
