show success popup after sign up information submitted
remove testing development purpose connect to facebook button from home page

--- a/app/views/registrations/create.js.erb
+++ b/app/views/registrations/create.js.erb
@@ -1,5 +1,6 @@
 <% if @success %>
-    $('#success-message').html('Your information submitted successfully.When account activated we will notify you by email.');
+    $('#request-sent').modal('show');
+    $('#signup').modal('hide');
 <% else %>
     console.log('---------------- render sign up errors-----------------------' );
     $('#success-message').html('');
