--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -34,6 +34,7 @@
 
 <%= render partial: 'shared/sign_up_modal'%>
 <%= render partial: 'shared/sign_in_modal'%>
+<%= render partial: 'shared/sign_up_success_message'%>
 
 <div class="identity">
   <div class="wrapper-content">
@@ -166,9 +167,6 @@
 
       </div>
     </div>
-    <% if current_user %>
-        <a href="<%= user_omniauth_authorize_path('facebook', add_facebook_to_account: true, user_id: current_user.id, origin: home_public_index_path) %>">Connect Facebook to my accoutn <%= image_tag('facebook-icon.png', :alt => 'fb') %></a>
-    <% end %>
 
   </div>
   <div class="footer row">
