--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -34,6 +34,7 @@
 
 <%= render partial: 'shared/sign_up_modal'%>
 <%= render partial: 'shared/sign_in_modal'%>
+<%= render partial: 'shared/sign_up_success_message'%>
 
 <div class="identity">
   <div class="wrapper-content">
