--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -66,7 +66,7 @@
   color: #00aeef;
 }
 
-.nav li:nth-child(5) > a:hover, .nav li:nth-child(5) > a:focus {
+.nav li:last-child > a:hover, .nav li:last-child > a:focus {
   background-color: #127bb2;
   color: #00aeef;
 }
