--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -2,6 +2,9 @@
   .expandable{
       cursor: pointer;
   }
+        .container{
+            margin-top: 100px;
+        }
 </style>
 
 <div class="container">
