[Bug Fixed]:  1. Brand Home page All subheaders and logos are center aligned 2. Influencers Home page all Logos are center aligned 3. About Us images are resized into 127*127px 4. All buttons on hover color changed into #f1b242

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -243,3 +243,8 @@
     padding-top: 20px;
     padding-bottom: 15px;
 }
+
+.btn-message:hover {
+    color: white;
+    background-color: #f1b242;
+}
