--- a/app/views/campaigns/brand_campaign.html.erb
+++ b/app/views/campaigns/brand_campaign.html.erb
@@ -54,7 +54,7 @@
 
     <div class="campaign-content brand-campaign-content">
 
-      <ul class="nav nav-tabs brand-campaign-tabs" id="campaign-tabs">
+      <ul class="nav nav-tabs campaign-nav-tabs" id="campaign-tabs">
         <li class= "active" id="performance_list"><a href="#performance"><span id="performance-blue"><%= image_tag('Performance_blue.png') %></span><span id="performance-black" class="display-none"><%= image_tag('Performance.png') %></span> <span class="performance-tab"></span> Performance </a></li>
         <li class= "" id="engagement_list"><a href="#engagement"><span id="engagement-black"><%= image_tag('Engagement_black.png') %></span><span id="engagement-blue" class="display-none"><%= image_tag('Engagement.png') %></span><span class="engagement-tab"></span> Engagement </a></li>
       </ul>
