--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -7,14 +7,13 @@
 <%= render partial: 'shared/sign_in_modal'%>
 <%= render partial: 'shared/sign_up_success_message'%>
 
-<div class="identity">
+<div class="identity" xmlns="http://www.w3.org/1999/html">
   <div class="wrapper-content">
     <div class="text-upper">
       <div class="text-upper-identity">Get Listed,</div>
     </div>
     <div class="text-lower">
-      <div class="text-lower-identity">Be an influencer and advocate</div>
-      <div class="text-lower-identity">brands you love.</div>
+      <div class="text-lower-identity influencer-text">Be an influencer and advocate brands you love.</div>
     </div>
   </div>
 </div>
@@ -48,9 +47,9 @@
       About Us
     </div>
 
-    <div class="text-description"> We initiate branding</div>
-    <div class="text-description"> campaigns and advocate high</div>
-    <div class="text-description"> quality brand engagement.</div>
+    <div class="text-description"> We initiate branding
+     </br>campaigns and advocate high
+     </br>quality brand engagement.</div>
 
     <div class="about-us-block-container">
       <div class="about-us-block">
