--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -661,8 +661,13 @@ only screen and (max-width: 420px) {
         padding: 10px 0px;
     }
 
-    .brand-campaign-tabs {
+    .campaign-nav-tabs {
         font-size: 13px;
     }
+}
+
+.btn-export:hover {
+    color: white;
+    background-color: #f1b242;
 }
 
