--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -63,7 +63,7 @@
 
     <div class="row contact-form">
       <div class="col-md-7 col-sm-8 col-xs-12">
-        <div class="text-top col-md-12 helvetica-neue-light"> Get in touch!</div>
+        <div class="text-top helvetica-neue-light"> Get in touch!</div>
 
         <%= form_tag get_in_touch_public_index_path do %>
             <div class="row">
