--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -49,9 +49,9 @@
       About Us
     </div>
 
-    <div class="text-description"> We initiate branding</div>
-    <div class="text-description"> campaigns and advocate high</div>
-    <div class="text-description"> quality brand engagement.</div>
+    <div class="text-description"> We initiate branding
+      </br>campaigns and advocate high
+      </br>quality brand engagement.</div>
 
     <div class="about-us-block-container">
       <div class="about-us-block">
