--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -335,3 +335,10 @@
     color: white;
     background-color: #f1b242;
 }
+
+@media (max-width: 480px) {
+    .personal-info-without-fb label, .personal-info-without-fb input, .personal-info-without-fb select, .personal-info-without-fb .form-group textarea {
+        display: block;
+        text-align: left;
+    }
+}
