--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -9,113 +9,115 @@
 
   <%= form_for @user, url: profile_path(@user), html: {class: 'form-horizontal personal-info-form'} do |f| %>
 
-      <h4 class="personal-info">PERSONAL INFORMATION</h4>
+      <div class="personal-info-without-fb">
 
-      <div class="form-group">
-        <div class="col-md-6">
-          <%= f.label :first_name, 'First Name' %>
-          <%= f.text_field :first_name, required: true  %>
-        </div>
-        <div class="col-md-6">
-          <%= f.label :last_name, 'Last Name' %>
-          <%= f.text_field :last_name, required: true  %>
-        </div>
-      </div>
+        <h4 class="personal-info">PERSONAL INFORMATION</h4>
 
-      <div class="form-group">
-        <div class="col-md-6">
-          <%= f.label :company_name, 'Company Name' %>
-          <%= f.text_field :company_name, required: true %>
+        <div class="form-group">
+          <div class="col-md-6">
+            <%= f.label :first_name, 'First Name' %>
+            <%= f.text_field :first_name, required: true  %>
+          </div>
+          <div class="col-md-6">
+            <%= f.label :last_name, 'Last Name' %>
+            <%= f.text_field :last_name, required: true  %>
+          </div>
         </div>
-        <div class="col-md-6">
-          <%= f.label :company_email, current_user.brand? ? 'Company Email' : 'Email' %>
-          <%= f.email_field :company_email, required: true %>
-        </div>
-      </div>
 
-      <div class="form-group">
-        <div class="col-md-6">
-          <%= f.label :industry %>
-          <%= f.text_field :industry, required: true %>
+        <div class="form-group">
+          <div class="col-md-6">
+            <%= f.label :company_name, 'Company Name' %>
+            <%= f.text_field :company_name, required: true %>
+          </div>
+          <div class="col-md-6">
+            <%= f.label :company_email, current_user.brand? ? 'Company Email' : 'Email' %>
+            <%= f.email_field :company_email, required: true %>
+          </div>
         </div>
-        <div class="col-md-6">
-          <%= f.label :phone %>
-          <%= f.text_field :phone, required: true %>
-        </div>
-      </div>
 
-      <div class="form-group">
-        <div class="col-md-6">
-          <%= f.label :street_address, class: 'textarea-label' %>
-          <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea', placeholder: 'Enter your address here', required: true %>
+        <div class="form-group">
+          <div class="col-md-6">
+            <%= f.label :industry %>
+            <%= f.text_field :industry, required: true %>
+          </div>
+          <div class="col-md-6">
+            <%= f.label :phone %>
+            <%= f.text_field :phone, required: true %>
+          </div>
         </div>
-        <div class="col-md-6">
-          <div class="row">
-            <div class="col-md-12">
-              <%= f.label :landmark %>
-              <%= f.text_field :landmark %>
-            </div>
-            <div class="col-md-12">
-              <%= f.label :city %>
-              <%= f.text_field :city, required: true %>
-            </div>
-            <div class="col-md-12">
-              <%= f.label :country %>
-              <%= f.country_select :country, {priority: %w(US CA IN)}, {:class => 'profile-dropdown-color'}, {} %>
+
+        <div class="form-group">
+          <div class="col-md-6">
+            <%= f.label :street_address, class: 'textarea-label' %>
+            <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea', placeholder: 'Enter your address here', required: true %>
+          </div>
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-12">
+                <%= f.label :landmark %>
+                <%= f.text_field :landmark %>
+              </div>
+              <div class="col-md-12">
+                <%= f.label :city %>
+                <%= f.text_field :city, required: true %>
+              </div>
+              <div class="col-md-12">
+                <%= f.label :country %>
+                <%= f.country_select :country, {priority: %w(US CA IN)}, {:class => 'profile-dropdown-color'}, {} %>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="form-group">
+        <div class="form-group">
 
-        <div class="col-md-6">
-          <%= f.label :zip_code %>
-          <%= f.text_field :zip_code, required: true %>
-        </div>
-
-        <div class="col-md-6">
-          <%= f.label :state %>
-          <%= render partial: 'shared/sub_region_select', locals: { parent_region: f.object.country } %>
-        </div>
-      </div>
-
-
-      <% unless current_user.provider? || current_user.uid? %>
-          <div class="divider-personal-info-password"></div>
-
-          <h4 class="account-setup">ACCOUNT SETUP</h4>
-
-          <div class="form-group">
-            <div class="col-md-6">
-              <%= f.label :current_password, 'Old Password' %>
-              <%= f.password_field :current_password %>
-            </div>
-            <div class="col-md-6">
-              <label>&nbsp;</label>
-            </div>
+          <div class="col-md-6">
+            <%= f.label :zip_code %>
+            <%= f.text_field :zip_code, required: true %>
           </div>
 
-          <div class="form-group">
-            <div class="col-md-6">
-              <%= f.label :password, 'New Password' %>
-              <%= f.password_field :password %>
-            </div>
-            <div class="col-md-6">
-              <%= f.label :password_confirmation, 'Retype Password' %>
-              <%= f.password_field :password_confirmation %>
-            </div>
+          <div class="col-md-6">
+            <%= f.label :state %>
+            <%= render partial: 'shared/sub_region_select', locals: { parent_region: f.object.country } %>
           </div>
-      <% end %>
+        </div>
 
-      <h4 class="company-info">
-        <%= @user.influencer? ? 'PROFESSIONAL INFORMATION' : 'COMPANY INFORMATION' %>
-      </h4>
+        <% unless current_user.provider? || current_user.uid? %>
+            <div class="divider-personal-info-password"></div>
 
-      <div class="form-group short-bio-row">
-        <div class="col-md-12">
-          <%= f.label :short_bio, 'Short Bio', class: 'textarea-label' %>
-          <%= f.text_area :short_bio, rows: 8, class: 'short_bio', required: true %>
+            <h4 class="account-setup">ACCOUNT SETUP</h4>
+
+            <div class="form-group">
+              <div class="col-md-6">
+                <%= f.label :current_password, 'Old Password' %>
+                <%= f.password_field :current_password %>
+              </div>
+              <div class="col-md-6">
+                <label>&nbsp;</label>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="col-md-6">
+                <%= f.label :password, 'New Password' %>
+                <%= f.password_field :password %>
+              </div>
+              <div class="col-md-6">
+                <%= f.label :password_confirmation, 'Retype Password' %>
+                <%= f.password_field :password_confirmation %>
+              </div>
+            </div>
+        <% end %>
+
+        <h4 class="company-info">
+          <%= @user.influencer? ? 'PROFESSIONAL INFORMATION' : 'COMPANY INFORMATION' %>
+        </h4>
+
+        <div class="form-group short-bio-row">
+          <div class="col-md-12">
+            <%= f.label :short_bio, 'Short Bio', class: 'textarea-label' %>
+            <%= f.text_area :short_bio, rows: 8, class: 'short_bio', required: true %>
+          </div>
         </div>
       </div>
 
