--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -2,12 +2,13 @@
   .expandable{
       cursor: pointer;
   }
-        .container{
-            margin-top: 100px;
+        .faq-container{
+            margin-bottom: 20px;
+            margin-top: 150px;
         }
 </style>
 
-<div class="container">
+<div class="container faq-container">
   <div class='panel-group'>
     <div class='panel panel-primary'>
       <div class='panel-heading panelHeading expandable'>
