--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -37,7 +37,7 @@
 .header {
   color: black;
   font-weight: lighter;
-  padding-top: 16px;
+//  padding-top: 16px;
 }
 
 @media screen and (min-width: 768px) {
