--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -2,8 +2,8 @@
 .wrapper-content{
   max-width: 1010px;
   margin: auto;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .wrapper-content .few-brand {
@@ -11,12 +11,8 @@
 }
 
 @media  (max-width: 767px){
-  .header .wrapper-content{
-    padding-left: 0px;
-  }
-  .logo{
-    padding-left: 10px;
-  }
+
+
 }
 /*.clear-padding-margin{*/
 /*padding-right: 0;*/
@@ -49,6 +45,10 @@
     z-index: 99;
     background-color: white;
   }
+
+}
+@media (min-width: 1072px) {
+
 }
 
 .navbar{
@@ -697,4 +697,45 @@ ul.menu-item li {
 .about-us-block img {
   height: 127px;
   width: 127px;
+}
+.welcome_bar {
+  background: rgba(0, 201, 243, 1) none repeat scroll 0 0;
+  color: #fff;
+  float: left;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 14px 0;
+  position: relative;
+  width: 100%;
+}
+.welcome_bar .left {
+  float: left;
+  padding-top: 5px;
+}
+.welcome_bar .right {
+  float: right;
+}
+.welcome_bar .right {
+  float: right;
+}
+.welcome_bar p {
+  float: left;
+  margin: 0;
+}
+.welcome_bar p a {
+  color: #fff;
+  margin: 0 35px 0 0;
+}
+.socialmedia {
+  float: right;
+  margin: 0 0 0 3px;
+}
+.socialmedia .space{
+  display: inline-block;
+  padding-left: 5px;
+  padding-right: 0;
+}
+.navbar-toggle{
+  padding-right: 0;
+  margin-right: 0;
 }
