--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -45,6 +45,10 @@
     z-index: 99;
     background-color: white;
   }
+  .welcome_bar{
+    top: -62px;
+    z-index: 100;
+  }
 
 }
 @media (min-width: 1072px) {
