--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -4,7 +4,15 @@
   }
         .faq-container{
             margin-bottom: 20px;
-            margin-top: 150px;
+            margin-top: 62px;
+            padding-top: 100px;
+        }
+
+        @media (max-width: 767px){
+            .faq-container{
+                margin-top: 35px;
+                padding-top: 0;
+            }
         }
 </style>
 
