--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -28,7 +28,11 @@
     <div class="right top_links">
       <p>
         <a class="hidden-xs" href="<%= faqs_public_index_path %>">FAQs</a>
-        <a class="hidden-xs" href='#signin'  data-toggle = 'modal'>Login</a>
+        <% if user_signed_in? %>
+            <a class="hidden-xs" href="<%= destroy_user_session_path %>">LOG OUT</a>
+      <% else %>
+            <a class="hidden-xs" href='#signin'  data-toggle = 'modal'>Login</a>
+      <% end %>
       </p>
       <div class="socialmedia">
         <div class="fb-twitter">
@@ -67,7 +71,7 @@
       </div>
 
       <div class="collapse navbar-collapse home-menu" id="myNavbar">
-        <ul class="nav navbar-nav my-nav-bar">
+        <ul class="nav navbar-nav my-nav-bar <%= user_signed_in? ? 'last-nav-item' : ''%>">
           <li><%= link_to 'INFLUENCERS', home_public_index_path, class: current_path(home_public_index_path) %></li>
           <li><%= link_to 'BRANDS', brand_home_public_index_path, class: current_path(brand_home_public_index_path) %></li>
           <li id="about"><a href="#about_us">ABOUT US</a></li>
