--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -4,6 +4,11 @@
 
 body {
   font-family: 'Raleway', sans-serif;
+
+  select, textarea, input {
+    border: 1px solid #d9d9d9;
+  }
+
 }
 
 .skin-blue .wrapper {
