--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -75,6 +75,7 @@
           <li><%= link_to 'INFLUENCERS', home_public_index_path, class: current_path(home_public_index_path) %></li>
           <li><%= link_to 'BRANDS', brand_home_public_index_path, class: current_path(brand_home_public_index_path) %></li>
           <li id="about"><a href="#about_us">ABOUT US</a></li>
+          <li id="nav-contact-us"><a href="#contact_us">CONTACT US</a></li>
           <% if user_signed_in? %>
               <li class="visible-xs-inline"><a href="<%= faqs_public_index_path %>">FAQs</a></li>
               <li class="visible-xs-inline"><a href="<%= profile_profile_index_path %>">DASHBOARD</a></li>
@@ -93,7 +94,7 @@
 
 <%= yield %>
 
-<div class="contact-us">
+<div class="contact-us" id="contact_us">
   <div class="wrapper-content">
 
     <div class="row contact-form">
@@ -185,6 +186,13 @@
 
             }
         }
+
+        $('#nav-contact-us a').click(function(){
+            $('html, body').animate({
+                scrollTop: $( $.attr(this, 'href') ).offset().top
+            }, 1000);
+            return false;
+        });
 
     });
 </script>
