--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -5,18 +5,18 @@
         .faq-container{
             margin-bottom: 20px;
             margin-top: 62px;
-            padding-top: 80px;
+            padding-top: 62px;
         }
 
         @media (max-width: 767px){
             .faq-container{
-                margin-top: 35px;
+                margin-top: 20px;
                 padding-top: 0;
             }
         }
 </style>
 
-<div class="container faq-container">
+<div class="wrapper-content faq-container">
   <div class='panel-group'>
     <div class='panel panel-primary'>
       <div class='panel-heading panelHeading expandable'>
