[Bug Fixed]: 1. Offers checkbox design change 2. add bank account cancel button background change on hover

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -965,6 +965,14 @@ textarea#company-short-bio{
   padding-top: 60px;
 }
 
+.left-zero-padding {
+  padding-left: 0;
+}
+
+.right-zero-padding {
+  padding-right: 0;
+}
+
 
 
 
