--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -106,11 +106,11 @@
             </div>
 
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-5 right-zero-padding">
                 <%= f.button  'SAVE', class: 'btn btn-withdraw pull-right' %>
               </div>
-              <div class="col-md-8">
-                <%= link_to 'CANCEL', '', class: 'btn btn-withdraw btn-close' %>
+              <div class="col-md-7 left-zero-padding">
+                <%= link_to 'CANCEL', '', class: 'btn btn-close' %>
               </div>
             </div>
 
