--- a/app/views/offers/_offer.erb
+++ b/app/views/offers/_offer.erb
@@ -4,7 +4,7 @@
       <span class="status-inbox"></span>
     </div>
 
-    <div class="select-offer">
+    <div class="select-offer squaredFour">
       <input type="checkbox"  value="1" class="select-offer" data-id="<%=offer.id %>"/>
       <label></label>
     </div>
