--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -472,6 +472,12 @@ only screen and (max-width: 340px) {
 
 .btn-close {
     background-color: #999999;
+    color: white;
+    margin: 25px 5px 5px 3px;
+    padding: 5px 30px 5px 30px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 11pt;
 }
 
 .bank-account-modal label {
@@ -504,5 +510,10 @@ only screen and (max-width: 340px) {
 .btn-download:hover, .btn-withdraw:hover, .btn-influencer-download:hover {
     color: white;
     background-color: #f1b242;
+}
+
+.btn-close:hover {
+    color: white;
+    background-color: #737373;
 }
 
