--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -74,16 +74,16 @@
 
       <div class="collapse navbar-collapse home-menu" id="myNavbar">
         <ul class="nav navbar-nav my-nav-bar <%= user_signed_in? ? 'last-nav-item' : ''%>">
-          <li><%= link_to 'INFLUENCERS', home_public_index_path, class: current_path(home_public_index_path) %></li>
+          <li><%= link_to 'INFLUENCERS', influencer_home_public_index_path, class: current_path(influencer_home_public_index_path) %></li>
           <li><%= link_to 'BRANDS', brand_home_public_index_path, class: current_path(brand_home_public_index_path) %></li>
           <li id="about"><a href="#about_us">ABOUT US</a></li>
           <li id="nav-contact-us"><a href="#contact_us">CONTACT US</a></li>
           <% if user_signed_in? %>
-              <li class="visible-xs-inline"><a href="<%= faqs_public_index_path %>">FAQs</a></li>
-              <li class="visible-xs-inline"><a href="<%= profile_profile_index_path %>">DASHBOARD</a></li>
+              <li class="visible-xs-inline"><a href="<%= faqs_public_index_path %>" class="<%= current_path(faqs_public_index_path) %>">FAQs</a></li>
+              <li class=""><a href="<%= profile_profile_index_path %>">DASHBOARD</a></li>
               <li class="visible-xs-inline"><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
           <% else %>
-              <li class="visible-xs-inline"><a href="<%= faqs_public_index_path %>">FAQs</a></li>
+              <li class="visible-xs-inline"><a href="<%= faqs_public_index_path %>" class="<%= current_path(faqs_public_index_path) %>">FAQs</a></li>
               <li class="visible-xs-inline"><a href='#signin'  data-toggle = 'modal'>LOGIN</a></li>
               <li><%= link_to 'SIGN UP FREE', '#signup', 'data-toggle' => 'modal', :class => 'btn-custom btn-theme text-white raleway-semibold' %></li>
           <% end %>
