--- a/app/views/influencer_payments/index.html.erb
+++ b/app/views/influencer_payments/index.html.erb
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <table class="table table-striped table-bordered table-responsive payments_table bank_accounts_table">
+  <table class="table table-striped table-bordered table-responsive bank_accounts_table">
     <thead>
     <tr class="payment-header">
       <th>Account Name</th>
