--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -17,28 +17,28 @@
             </div>
 
             <div class="col-md-4">
-              <%= f.label :bank_name, "Bank Name" %>
+              <%= f.label :bank_name, 'Bank Name' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :bank_name %>
             </div>
 
             <div class="col-md-4">
-              <%= f.label :address, "Address" %>
+              <%= f.label :address, 'Address' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :address %>
             </div>
 
             <div class="col-md-4">
-              <%= f.label :city, "City" %>
+              <%= f.label :city, 'City' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :city %>
             </div>
 
             <div class="col-md-4">
-              <%= f.label :state, "State/Region" %>
+              <%= f.label :state, 'State/Region' %>
             </div>
             <div class="col-md-8">
               <%#= render partial: 'shared/sub_region_select', locals: {parent_region: f.object.country } %>
@@ -46,14 +46,14 @@
             </div>
 
             <div class="col-md-4">
-              <%= f.label :zip, "ZIP/Postal Code" %>
+              <%= f.label :zip, 'ZIP/Postal Code' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :zip %>
             </div>
 
             <div class="col-md-4">
-              <%= f.label :country, "Country" %>
+              <%= f.label :country, 'Country' %>
             </div>
             <div class="col-md-8">
               <%= f.country_select :country, {priority: %w(US CA IN)}, { :class => 'bank-account-country'}, {} %>
@@ -64,42 +64,42 @@
             </div>
 
             <div class="col-md-4">
-              <%= f.label :account_name, "Account Name" %>
+              <%= f.label :account_name, 'Account Name' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :account_name %>
             </div>
 
             <div class="col-md-4">
-              <%= f.label :account_number, "Account Number" %>
+              <%= f.label :account_number, 'Account Number' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :account_number %>
             </div>
 
             <div class="col-md-4">
-              <%= f.label :currency, "Currency" %>
+              <%= f.label :currency, 'Currency' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :currency %>
             </div>
 
             <div class="col-md-4">
-              <%= f.label :routing_number, "Routing Number" %>
+              <%= f.label :routing_number, 'Routing Number' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :routing_number %>
             </div>
 
             <div class="col-md-4">
-              <%= f.label :bic, "BIC (Swift Code)" %>
+              <%= f.label :bic, 'BIC (Swift Code)' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :bic %>
             </div>
 
             <div class="col-md-4">
-              <%= f.label :iban, "IBAN" %>
+              <%= f.label :iban, 'IBAN' %>
             </div>
             <div class="col-md-8">
               <%= f.text_field :iban %>
@@ -107,7 +107,7 @@
 
             <div class="row">
               <div class="col-md-5 right-zero-padding">
-                <%= f.button  'SAVE', class: 'btn btn-withdraw pull-right' %>
+                <%= f.button  'SAVE', class: 'btn btn-withdraw pull-right ' %>
               </div>
               <div class="col-md-7 left-zero-padding">
                 <%= link_to 'CANCEL', '', class: 'btn btn-close' %>
